SMAR-27939 - Mobile view - spacing issue fixed

--- a/tetrapak-customerhub/ui.dev/src/source/templates/components/anchor/_anchor.scss
+++ b/tetrapak-customerhub/ui.dev/src/source/templates/components/anchor/_anchor.scss
@@ -21,6 +21,11 @@
         color: $color-congress-blue;
         font-weight: 500;
         border-bottom: 1px solid $color-mercury;
+
+        @media #{$mobile} {
+            @include margin($margin-zero $margin-md);
+            @include padding($padding-sm $padding-zero);
+        }
     }
 
     @media #{$desktop} {
